--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "shadow-cljs": "2.26.0"
   },
   "dependencies": {
+    "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0"
   }
 }
