--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "shadow-cljs": "2.26.0"
   },
   "dependencies": {
+    "@nytimes/react-prosemirror": "^0.4.2",
     "markdown-to-jsx": "^7.3.2",
+    "prosemirror-commands": "^1.5.2",
+    "prosemirror-keymap": "^1.2.2",
+    "prosemirror-schema-basic": "^1.2.2",
+    "prosemirror-schema-list": "^1.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0"
